sources/iptables.rules
# Generated by iptables-save v1.4.21 on Sun Oct  2 09:33:40 2016
*filter
:INPUT DROP [776:32578]
:FORWARD ACCEPT [72:16450]
:OUTPUT ACCEPT [766:32172]
:fail2ban-ssh - [0:0]
:firew-after-forward - [0:0]
:firew-after-input - [0:0]
:firew-after-logging-forward - [0:0]
:firew-after-logging-input - [0:0]
:firew-after-logging-output - [0:0]
:firew-after-output - [0:0]
:firew-before-forward - [0:0]
:firew-before-input - [0:0]
:firew-before-logging-forward - [0:0]
:firew-before-logging-input - [0:0]
:firew-before-logging-output - [0:0]
:firew-before-output - [0:0]
:firew-logging-allow - [0:0]
:firew-logging-deny - [0:0]
:firew-not-local - [0:0]
:firew-reject-forward - [0:0]
:firew-reject-input - [0:0]
:firew-reject-output - [0:0]
:firew-skip-to-policy-forward - [0:0]
:firew-skip-to-policy-input - [0:0]
:firew-skip-to-policy-output - [0:0]
:firew-track-input - [0:0]
:firew-track-output - [0:0]
:firew-user-forward - [0:0]
:firew-user-input - [0:0]
:firew-user-limit - [0:0]
:firew-user-limit-accept - [0:0]
:firew-user-logging-forward - [0:0]
:firew-user-logging-input - [0:0]
:firew-user-logging-output - [0:0]
:firew-user-output - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -j firew-before-logging-input
-A INPUT -j firew-before-input
-A INPUT -j firew-after-input
-A INPUT -j firew-after-logging-input
-A INPUT -j firew-reject-input
-A INPUT -j firew-track-input
-A FORWARD -j firew-before-logging-forward
-A FORWARD -j firew-before-forward
-A FORWARD -j firew-after-forward
-A FORWARD -j firew-after-logging-forward
-A FORWARD -j firew-reject-forward
-A OUTPUT -j firew-before-logging-output
-A OUTPUT -j firew-before-output
-A OUTPUT -j firew-after-output
-A OUTPUT -j firew-after-logging-output
-A OUTPUT -j firew-reject-output
-A OUTPUT -j firew-track-output
-A fail2ban-ssh -j RETURN
-A firew-after-input -p udp -m udp --dport 137 -j firew-skip-to-policy-input
-A firew-after-input -p udp -m udp --dport 138 -j firew-skip-to-policy-input
-A firew-after-input -p tcp -m tcp --dport 139 -j firew-skip-to-policy-input
-A firew-after-input -p tcp -m tcp --dport 445 -j firew-skip-to-policy-input
-A firew-after-input -p udp -m udp --dport 67 -j firew-skip-to-policy-input
-A firew-after-input -p udp -m udp --dport 68 -j firew-skip-to-policy-input
-A firew-after-input -m addrtype --dst-type BROADCAST -j firew-skip-to-policy-input
-A firew-after-logging-input -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[FIREW BLOCK] "
-A firew-before-forward -j firew-user-forward
-A firew-before-input -i lo -j ACCEPT
-A firew-before-input -m state --state RELATED,ESTABLISHED -j ACCEPT
-A firew-before-input -m state --state INVALID -j firew-logging-deny
-A firew-before-input -m state --state INVALID -j DROP
-A firew-before-input -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A firew-before-input -p icmp -m icmp --icmp-type 4 -j ACCEPT
-A firew-before-input -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A firew-before-input -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A firew-before-input -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A firew-before-input -p udp -m udp --sport 67 --dport 68 -j ACCEPT
-A firew-before-input -j firew-not-local
-A firew-before-input -d 224.0.0.251/32 -p udp -m udp --dport 5353 -j ACCEPT
-A firew-before-input -d 239.255.255.250/32 -p udp -m udp --dport 1900 -j ACCEPT
-A firew-before-input -j firew-user-input
-A firew-before-input -s 95.90.241.12/32 -j ACCEPT
-A firew-before-output -o lo -j ACCEPT
-A firew-before-output -m state --state RELATED,ESTABLISHED -j ACCEPT
-A firew-before-output -j firew-user-output
-A firew-logging-allow -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[FIREW ALLOW] "
-A firew-logging-deny -m state --state INVALID -m limit --limit 3/min --limit-burst 10 -j RETURN
-A firew-logging-deny -m limit --limit 3/min --limit-burst 10 -j LOG --log-prefix "[FIREW BLOCK] "
-A firew-not-local -m addrtype --dst-type LOCAL -j RETURN
-A firew-not-local -m addrtype --dst-type MULTICAST -j RETURN
-A firew-not-local -m addrtype --dst-type BROADCAST -j RETURN
-A firew-not-local -m limit --limit 3/min --limit-burst 10 -j firew-logging-deny
-A firew-not-local -j DROP
-A firew-skip-to-policy-forward -j ACCEPT
-A firew-skip-to-policy-input -j DROP
-A firew-skip-to-policy-output -j ACCEPT
-A firew-track-output -p tcp -m state --state NEW -j ACCEPT
-A firew-track-output -p udp -m state --state NEW -j ACCEPT
-A firew-user-input -p tcp -m tcp --dport 53 -m comment --comment "\'dapp_DNS\'" -j ACCEPT
-A firew-user-input -p udp -m udp --dport 53 -m comment --comment "\'dapp_DNS\'" -j ACCEPT
-A firew-user-input -s 10.99.1.0/24 -j ACCEPT
-A firew-user-limit -m limit --limit 3/min -j LOG --log-prefix "[FIREW LIMIT BLOCK] "
-A firew-user-limit -j REJECT --reject-with icmp-port-unreachable
-A firew-user-limit-accept -j ACCEPT
COMMIT
# Completed on Sun Oct  2 09:33:40 2016
# Generated by iptables-save v1.4.21 on Sun Oct  2 09:33:40 2016
*nat
:PREROUTING ACCEPT [581:24954]
:INPUT ACCEPT [2:638]
:OUTPUT ACCEPT [16:2150]
:POSTROUTING ACCEPT [17:2246]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 22222 -j DNAT --to-destination 10.99.1.1:22
-A PREROUTING -i eth0 -p tcp -m tcp --dport 25432 -j DNAT --to-destination 10.99.3.3:22
-A POSTROUTING -s 10.99.1.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.99.3.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sun Oct  2 09:33:40 2016
